--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "fabrication-rochet",
   "version": "1.0.0",
   "description": "MERN e-shop app",
-  "main": "index.js",
+  "main": "index.js", 
+  "type": "module",
   "scripts": {
-    "start": "nodemon backend/server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,11 @@
   },
   "homepage": "https://github.com/AnkiaDev/fabrication-rochet#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.7"
   }
 }
